# flashforge-api-server

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  printers.example.toml
.forgejo/workflows/: build.yml
docs/: Get Printer Info.bru  Get Printer Position.bru  Get Printer Progress.bru  Get Printer Status.bru  Get Printer Temperature.bru  bruno.json
docs/Printers/: Camera Snapshot.bru  Camera Stream.bru  Camera.bru  Head Position.bru  Info.bru  List Printer Names.bru  List Printers.bru  Progress.bru  Set Temperature.bru  Status.bru  Temperatures.bru
docs/environments/: default.bru
src/: config.rs  main.rs  manager.rs  models.rs  printer.rs  printers.rs  routes.rs  socket.rs  util.rs
src/routes/: api.rs
