[package]
name = "flashforge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.134"
tracing-subscriber = {  version = "0.3.19", features = ["env-filter"] }
log = "0.4.22"
regex = "1.11.1"
toml = "0.8.19"
lettre = { version = "0.11.11", features = ["rustls-tls"] }
